<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/menu_google_map"
        android:icon="@drawable/menu_base_layer"
        android:orderInCategory="1"
        app:showAsAction="always">
        <menu>
            <group android:id="@+id/group_map_type" android:checkableBehavior="single">
                <item android:id="@+id/menu_satellite"
                    android:title="@string/google_map_type_satellite"
                    android:checkable="true" />
                <item android:id="@+id/menu_hybrid"
                    android:title="@string/google_map_type_hybrid"
                    android:checkable="true"
                    android:checked="true" />
                <item android:id="@+id/menu_terrain"
                    android:title="@string/google_map_type_terrain"
                    android:checkable="true" />
                <item android:id="@+id/menu_normal"
                    android:title="@string/google_map_type_normal"
                    android:checkable="true" />
            </group>
        </menu>
    </item>
</menu>