<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/horizontal_2x"
    android:paddingRight="@dimen/horizontal_2x"
    android:paddingEnd="@dimen/horizontal_2x"
    android:paddingStart="@dimen/horizontal_2x"
    android:paddingTop="@dimen/vertical_2x"
    android:paddingBottom="@dimen/vertical_2x">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/text_large"
        android:text="@string/help_title"/>
    <TextView
        android:gravity="start|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/vertical"
        android:paddingBottom="@dimen/vertical_small"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/text_medium"
        android:text="@string/help_max_stop"
        app:drawableStartCompat="@drawable/marker_max_stop" />
    <TextView
        android:gravity="start|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/vertical_small"
        android:paddingBottom="@dimen/vertical_small"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/text_medium"
        android:text="@string/help_streetcar_stop"
        app:drawableStartCompat="@drawable/marker_streetcar_stop" />
    <androidx.constraintlayout.widget.ConstraintLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/vertical_small"
        android:paddingBottom="@dimen/vertical_small"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables"><!-- To allow animating marker_max_arrival -->
        <ImageView
            android:id="@+id/image_arrival"
            android:importantForAccessibility="no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:src="@drawable/marker_max_arrival"
            android:rotation="180"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView android:id="@+id/text_help_arrival"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="@dimen/text_medium"
            android:text="@string/help_arrival"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_arrival"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/dialog_help_action_sweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical"
            android:layout_gravity="end"
            android:text="@string/dialog_help_action"
            android:textColor="@color/reviewButtonTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_help_arrival"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/horizontal"
            android:paddingStart="@dimen/horizontal"
            android:paddingTop="@dimen/vertical_2x"
            android:paddingBottom="@dimen/vertical_2x"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="@dimen/text_small"
            android:text="@string/permission_location_reason"
            app:layout_constraintBottom_toTopOf="@id/dialog_help_action_sweet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_help_action_sweet"
            app:layout_constraintEnd_toStartOf="@id/dialog_help_action_sweet"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>